work through the end of class

--- a/style.css
+++ b/style.css
@@ -57,3 +57,13 @@
     flex-direction: column;
   }
 }
+
+body {
+  background-color: white;
+  color: black;
+}
+
+.dark {
+  background-color: black;
+  color: white;
+}
