--- a/dark.css
+++ b/dark.css
@@ -1,3 +1,34 @@
+/* @media (prefers-color-scheme: dark) {
+        .main-head {
+            background-color: black;
+        }
+
+        .content {
+            background-color: black;
+        }
+
+        .main-nav {
+            background-color: black;
+        }
+
+        .side {
+            background-color: black;
+        }
+
+        .ad {
+            background-color: black;
+        }
+
+        .main-footer {
+            background-color: black;
+        }
+
+        body {
+        color: white;
+        background-color: black;
+        }
+} */
+
 .black {
     .main-head {
         background-color: black;
@@ -25,35 +56,4 @@
 
     color: white;
     background-color: black;
-}
-
-@media (prefers-colors-scheme: dark) {
-    .black {
-        .main-head {
-            background-color: black;
-        }
-
-        .content {
-            background-color: black;
-        }
-
-        .main-nav {
-            background-color: black;
-        }
-
-        .side {
-            background-color: black;
-        }
-
-        .ad {
-            background-color: black;
-        }
-
-        .main-footer {
-            background-color: black;
-        }
-
-        color: white;
-        background-color: black;
-    }
 }
